kubernetes/apps/llm/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: llm
  labels:
    app.kubernetes.io/name: open-webui
spec:
  parentRefs:
    - name: internal
      namespace: gateway-system
      sectionName: https
  hostnames:
    - llm.apps.mbhome.biz
  rules:
    - backendRefs:
        - name: open-webui
          port: 80
